--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests! and gen code coverage
-      - run: mvn integration-test
+      - run: mvn integration-test cobertura:cobertura
 
       - store_test_results:
           path: target/surefire-reports
